--- a/config/database.yml
+++ b/config/database.yml
@@ -1,35 +1,20 @@
-# SQLite. Versions 3.8.0 and up are supported.
-#   gem install sqlite3
-#
-#   Ensure the SQLite 3 gem is defined in your Gemfile
-#   gem "sqlite3"
-#
 default: &default
-  adapter: sqlite3
-  pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
-  timeout: 5000
+  adapter: postgresql
+  pool: 5
+  encoding: unicode
+  host: <%= ENV.fetch("DATABASE_HOST") %>
+  port: <%= ENV.fetch("DATABASE_PORT") %>
+  username: <%= ENV.fetch("DATABASE_USERNAME") %>
+  password: <%= ENV["DATABASE_PASSWORD"] %>
 
 development:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: cinema_development
-  host: localhost
-  pool: 5
-  username: postgres
-  password: admin
 
-# Warning: The database defined as "test" will be erased and
-# re-generated from your development database when you run "rake".
-# Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
+  <<: *default
   database: cinema_test
-  host: localhost
-  pool: 5
-  username: postgres
-  password: admin
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: cinema_production
